--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-
-  <link rel="stylesheet" href="loader.css">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -31,23 +30,11 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>flutter_auth</title>
-  <div id="container">
-    <div class="divider" aria-hidden="true"></div>
-    <p class="loading-text" aria-label="Loading">
-      <span class="letter" aria-hidden="true">L</span>
-      <span class="letter" aria-hidden="true">o</span>
-      <span class="letter" aria-hidden="true">a</span>
-      <span class="letter" aria-hidden="true">d</span>
-      <span class="letter" aria-hidden="true">i</span>
-      <span class="letter" aria-hidden="true">n</span>
-      <span class="letter" aria-hidden="true">g</span>
-    </p>
-  </div>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1471240285';
+    var serviceWorkerVersion = '3019592726';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
